# face-analyzer-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: face-analyzer.yml
kubernetes/: face-analyzer.service.yml
src/: main.py  my_service.py  utils.py
tests/: test_logger.py
